# freebsd-ports-gnome

./: FOOBAR  GNOME_TODO  GST_TODO  MOVED  TODO  UPDATING
.github/: ISSUE_TEMPLATE.md
Mk/: bsd.gstreamer.mk  bsd.port.mk  bsd.ruby.mk
Mk/Scripts/: qa.sh
Mk/Uses/: cargo.mk  gnome.mk  gstreamer.mk  mate.mk  meson.mk
accessibility/: Makefile
accessibility/accerciser/: Makefile  distinfo  pkg-plist
accessibility/at-spi2-atk/: Makefile  distinfo
accessibility/at-spi2-core/: Makefile  distinfo  pkg-plist
accessibility/atk/: Makefile  distinfo  pkg-plist
accessibility/atk-reference/: Makefile
accessibility/atkmm/: Makefile  distinfo  pkg-plist
accessibility/caribou/: Makefile  distinfo
accessibility/orca/: Makefile  distinfo  pkg-plist
accessibility/py-atspi/: Makefile  distinfo  pkg-plist
accessibility/py3-atspi/: Makefile  distinfo  pkg-plist
archivers/engrampa/: Makefile  distinfo  pkg-plist
archivers/file-roller/: Makefile  distinfo  pkg-plist
archivers/gcab/: Makefile  distinfo  pkg-plist
archivers/gnome-autoar/: Makefile  distinfo  pkg-plist
astro/p5-Astro-satpass/: Makefile  distinfo
audio/: Makefile
audio/beets/: Makefile
audio/csound/: Makefile  distinfo
audio/fasttracker2/: Makefile  distinfo
audio/gnome-music/: Makefile  distinfo  pkg-plist
audio/gstreamer1-plugins-cdparanoia/: Makefile
audio/gstreamer1-plugins-sndio/: Makefile
audio/libcanberra/: Makefile
audio/libcanberra-gtk3/: Makefile  pkg-plist
audio/libmatemixer/: Makefile  distinfo  pkg-plist
audio/mate-media/: Makefile  distinfo  pkg-plist
audio/noson-app/: Makefile  distinfo
audio/rhythmbox/: Makefile  distinfo  pkg-plist
audio/spotify-tui/: Makefile
audio/spotifyd/: Makefile
audio/yoshimi/: Makefile  distinfo  pkg-plist
biology/gemma/: Makefile
cad/linuxcnc-devel/: Makefile
converters/fribidi/: Makefile  distinfo  pkg-plist
converters/pdf2djvu/: Makefile
databases/evolution-data-server/: Makefile  distinfo  pkg-plist
databases/grass7/: Makefile
databases/kbibtex/: Makefile
databases/libgda5/: Makefile  distinfo
databases/redis-devel/: Makefile  distinfo
databases/rocksdb/: Makefile  distinfo
databases/sqlite3/: Makefile
deskutils/: Makefile
deskutils/baobab/: Makefile  distinfo  pkg-plist
deskutils/bijiben/: Makefile  distinfo  pkg-plist
deskutils/caja-extensions/: Makefile  distinfo  pkg-plist
deskutils/calibre/: Makefile
deskutils/cfiles/: Makefile
deskutils/glabels/: Makefile
deskutils/gnome-books/: Makefile  distinfo  pkg-descr  pkg-plist
deskutils/gnome-calendar/: Makefile  distinfo  pkg-plist
deskutils/gnome-characters/: Makefile  distinfo  pkg-descr  pkg-plist
deskutils/gnome-clocks/: Makefile  distinfo  pkg-plist
deskutils/gnome-contacts/: Makefile  distinfo  pkg-plist
deskutils/gnome-dictionary/: Makefile  distinfo  pkg-plist
deskutils/gnome-documents/: Makefile  distinfo  pkg-plist
deskutils/gnome-font-viewer/: Makefile  distinfo
deskutils/gnome-initial-setup/: Makefile  distinfo  pkg-plist
deskutils/gnome-initial-setup/files/: configure.ac  patch-configure  patch-gnome-initial-setup_Makefile.in  patch-gnome-initial-setup_pages_Makefile.in
deskutils/gnome-maps/: Makefile  distinfo  pkg-plist
deskutils/gnome-photos/: Makefile  distinfo  pkg-plist
deskutils/gnome-screenshot/: Makefile  distinfo  pkg-plist
deskutils/gnome-shell-extension-audio-output-switcher/: Makefile
deskutils/gnome-shell-extension-backslide/: Makefile
deskutils/gnome-shell-extension-coverflow/: Makefile  distinfo
deskutils/gnome-shell-extension-dashtodock/: Makefile  distinfo  pkg-plist
deskutils/gnome-shell-extension-filesmenu/: Makefile
devel/: Makefile
editors/: Makefile
games/: Makefile
graphics/: Makefile
lang/: Makefile
mail/: Makefile
misc/: Makefile
mozo/: Makefile
multimedia/: Makefile
net/: Makefile
sysutils/: Makefile
textproc/: Makefile
www/: Makefile
x11/: Makefile
x11-themes/: Makefile
x11-toolkits/: Makefile
x11-wm/mutter/files/: configure.ac  patch-configure  patch-src_backends_meta-egl.c  patch-src_compositor_compositor.c  patch-src_core_main.c  patch-src_x11_window-props.c
x11/gdm/files/: Makefile.am  configure.ac  daemon_Makefile.am  gdm.in  patch-Makefile.in  patch-common_Makefile.in  patch-common_gdm-address.c  patch-common_gdm-common.c  patch-common_gdm-common.h  patch-common_gdm-log.c  patch-config.h.in  patch-configure  patch-daemon_Makefile.in  patch-daemon_gdm-display.c  patch-daemon_gdm-launch-environment.c  patch-daemon_gdm-local-display-factory.c  patch-daemon_gdm-manager.c  patch-daemon_gdm-server.c  patch-daemon_gdm-session-worker-job.c  patch-daemon_gdm-session-worker.c  patch-daemon_gdm-session.c  patch-daemon_gdm-session.h  patch-daemon_gdm-xdmcp-display-factory.c  patch-data_Init.in  patch-data_Xsession.in  patch-data_dconf_defaults_00-upstream-settings  patch-data_gdm.conf-custom.in  patch-data_gdm.schemas.in  patch-data_pam-redhat_gdm-fingerprint.pam  patch-libgdm_gdm-user-switching.c
(+1258 files in other folders)
