--- configure.ac.orig	2017-05-10 17:35:31.000000000 +0200
+++ configure.ac	2017-06-21 16:35:56.868128000 +0200
@@ -31,8 +31,6 @@
 PACKAGEKIT_REQUIRED_VERSION=1.1.4
 
 PKG_CHECK_MODULES(INITIAL_SETUP,
-                  libnm >= $LIBNM_REQUIRED_VERSION
-                  libnma >= $LIBNMA_REQUIRED_VERSION
                   polkit-gobject-1 >= $POLKIT_REQUIRED_VERSION
                   accountsservice
                   gnome-desktop-3.0 >= $GNOME_DESKTOP_REQUIRED_VERSION
